[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GimballedCamera.gd" type="Script" id=1]

[node name="GimballedCamera" type="Spatial"]

script = ExtResource( 1 )
MIN_DISTANCE = 2
MAX_DISTANCE = 10
CAMERA_SPEED = 2
ZOOM_SPEED = 2
CHANGE_TARGET_DURATION = 1

[node name="YawGimbal" type="Spatial" parent="." index="0"]

_sections_unfolded = [ "Transform" ]

[node name="PitchGimbal" type="Spatial" parent="YawGimbal" index="0"]

[node name="Camera" type="Camera" parent="YawGimbal/PitchGimbal" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Target" type="Spatial" parent="." index="2"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]


